-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 17.0.0
-
None
-
42389730b (18.0)
To reproduce the issue:
- Use https://doc.qt.io/qt-6/qt-generate-deploy-qml-app-script.html.
- Check "install".
- Build; the files will be installed to /tmp.
- Switch kit and/or build configuration (e.g. debug to release)
- Files will still be installed to /tmp even though they shouldn't be mixed in with the previous ones.
For Gerrit Dashboard: QTCREATORBUG-33640 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
684718,6 | CMakePM: Set a unique value for CMAKE_INSTALL_PREFIX | 18.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |